--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebookAccount": {
-    "email": "x",
-    "password": "",
+    "email": "09104997119",
+    "password": "@Hiph0prap",
     "2FASecret": "",
     "i_user": "",
     "proxy": null,
